// Generated by github.com/davyxu/tabtoy
// Version: 2.9.1
// Modify by nuyan
// DO NOT EDIT!!

syntax = "proto3";

package gameconf;


// Defined in table: DoNotUseThis
enum ClientDeviceTyp
{	

	
	CDTInvalid = 0; // 设备类型

	// 安卓
	CDTAndroid = 1; 

	// IOS
	CDTIOS = 2; 

	// PC
	CDTPC = 11; 

}

// Defined in table: DoNotUseThis
enum AccountLoginTyp
{	

	
	ALTInvalid = 0; // 账号登录类型

	// 测试账号
	ALTTest = 1; 

	// 桌上学院
	ALTTablePark = 2; 

}

// Defined in table: DoNotUseThis
enum GenderTyp
{	

	
	SETInvalid = 0; // 性别

	// 男
	SETMale = 1; 

	// 女
	SETFemale = 2; 

	// 第三性别
	SETThird = 3; 

}

// Defined in table: DoNotUseThis
enum WinLoseTyp
{	

	
	WLTInvalid = 0; // 胜负类型

	// 胜利
	WLTWin = 1; 

	// 失败
	WLTLose = 2; 

	// 平局
	WLTDraw = 3; 

}

// Defined in table: DoNotUseThis
enum RoleTyp
{	

	
	RTInvalid = 0; // 游戏身份

	// 平民
	RTPleb = 1; 

	// 卧底
	RTSpy = 2; 

}

// Defined in table: DoNotUseThis
enum GameModeTyp
{	

	
	MGTInvalid = 0; // 游戏模式类型

	// 谁是卧底文本场
	MGTSpyText = 1; 

	// 谁是卧底语音场
	MGTSpyVoice = 2; 

}

// Defined in table: DoNotUseThis
enum ChatChannelTyp
{	

	
	ChatCTInvalid = 0; // 聊天频道

	// 私人
	ChatCTPrivate = 1; 

	// 游戏
	ChatCTGame = 2; 

	// 大厅
	ChatCTLobby = 3; 

	// 全局
	ChatCTGlobal = 4; 

	// 组队
	ChatCTTeam = 5; 

	// 房间
	ChatCTRoom = 7; 

}

// Defined in table: DoNotUseThis
enum ChatMsgTyp
{	

	
	CMTInvalid = 0; // 聊天消息类型

	
	CMTText = 1; // 文字

	
	CMTMsgID = 2; // MsgID的方式

	
	CMTSysTip = 3; // 系统提示

	
	CMTExpression = 4; // 表情

}

// Defined in table: DoNotUseThis
enum DateTyp
{	

	
	DTTInvalid = 0; // 日期类型

	// 秒
	DTTSecond = 1; 

	// 分
	DTTMinute = 2; 

	// 时
	DTTHour = 3; 

	// 天
	DTTDay = 4; 

	// 周
	DTTWeek = 5; 

	// 月
	DTTMonth = 6; 

	// 年
	DTTYear = 7; 

}

// Defined in table: DoNotUseThis
enum KickUserOutReason
{	

	
	KUOInvalid = 0; // 踢用户原因

	// 重复登录
	KUORelogin = 1; 

	// 封号
	KUOAccountLock = 2; 

	// 服务器出错
	KUOServerError = 3; 

	// 服务器维护
	KUOServerUpgrade = 4; 

}

// Defined in table: DoNotUseThis
enum UserConnectState
{	

	
	USConnect = 0; // 玩家状态在线

	
	USDisconnect = 1; // 玩家状态离线

	
	USQuit = 2; // 玩家状态离开（玩家已退出，但游戏中该角色仍需存在）

}

// Defined in table: DoNotUseThis
enum LookerTyp
{	

	
	LTInvalid = 0; // 旁观类型

	// 双盲视角
	LTBlind = 1; 

	// 玩家视角
	LTPlayer = 2; 

	// 上帝视角
	LTGod = 3; 

}

// Defined in table: DoNotUseThis
enum CardColorTyp
{	

	
	CCTInvalid = 0; // 牌色

	// 红桃
	CCTHeart = 1; // 红桃

	// 梅花
	CCTClub = 2; // 梅花

	// 方块
	CCTDiamond = 3; // 方块

	// 黑桃
	CCTSpade = 4; // 黑桃

}

// Defined in table: DoNotUseThis
enum CountryTyp
{	

	
	KDTInvalid = 0; // 国籍

	// 魏
	KITWei = 1; 

	// 蜀
	KITSHu = 2; 

	// 吴
	KITWu = 3; 

	// 群
	KITQun = 4; 

}

// Defined in table: DoNotUseThis
enum SkillTyp
{	

	
	STInvalid = 0; // 技能类型

	// 翻牌技
	STFaceUp = 1; 

	// 被动技
	STPassive = 2; 

}

// Defined in table: DoNotUseThis
enum UserGameStatusTyp
{	

	
	UGSTInvalid = 0; 

	
	UGSTFree = 1; 

	
	UGSTMatching = 2; 

	
	UGSTReadyRoom = 3; 

	
	UGSTGame = 4; 

}

// Defined in table: DoNotUseThis
enum GameStartTyp
{	

	
	GSTypeInvalid = 0; // 开始游戏类别

	
	GSTypeNormal = 1; 

	
	GSTypeMatch = 2; 

}

// Defined in table: DoNotUseThis
enum SelectCardTyp
{	

	// 无
	SCTNone = 0; 

	// 任意卡牌
	SCTAny = 1; 

	// 己方卡牌
	SCTMyOwn = 2; 

	// 敌方卡牌
	SCTEnemy = 3; 

	// 己方正面朝上的卡牌
	SCTMyOwnFaceUp = 4; 

	// 己方背面朝上的卡牌
	SCTMyOwnBack = 5; 

	// 敌方正面朝上的卡牌
	SCTEnemyFaceUp = 6; 

	// 敌方背面朝上的卡牌
	SCTEnemyBack = 7; 

	// 其他己方卡牌
	SCTOtherMyOwn = 8; 

	// 其他己方正面朝上的卡牌
	SCTOtherMyOwnFaceUp = 9; 

	// 其他己方背面朝上的卡牌
	SCTOtherMyOwnBack = 10; 

	// 其他敌方正面朝上的卡牌
	SCTOtherEnemyFaceUp = 11; 

	// 其他敌方背面朝上的卡牌
	SCTOtherEnemyBack = 12; 

	// 非重装卡牌
	SCTNotHeavy = 13; 

	// 一张己方卡牌和一张敌方卡牌
	SCTOneMyOwnAndOneEnemy = 14; 

	// 其他卡牌
	SCTOther = 15; 

	// 我方军营或者敌方军营
	SCTMyOwnBaseOrEnemyBase = 16; 

	// 任意一张可以后退一格的卡牌
	SCTAnyCanBack = 17; 

}

// Defined in table: DoNotUseThis
enum AreaTyp
{	

	// 无
	ATNone = 0; 

	// 我方置牌区
	ATMyPlace = 1; 

	// 交战区
	ATBattle = 2; 

	// 敌方置牌区
	ATEnemyPlace = 3; 

}

// Defined in table: DoNotUseThis
enum ExpireTyp
{	

	
	ETInvalid = 0; 

	
	ETRound = 1; 

	
	ETTimes = 2; 

}

// Defined in table: DoNotUseThis
enum Map
{	

	// 地图行数
	MRow = 0; 

	// 地图列数
	MCol = 1; 

}


// Defined in table: DoNotUseThis
message DoNotUseThis
{	
	
	
	repeated DoNotUseThisDefine DoNotUseThis = 1; // DoNotUseThis

}

// Defined in table: DoNotUseThis
message Position
{	
	
	
	int32 X = 1; 
	
	
	int32 Y = 2; 

}

// Defined in table: DoNotUseThis
message PropPack
{	
	
	// 道具
	int32 PropID = 1; 
	
	// 数量
	int32 Num = 2; 

}

// Defined in table: DoNotUseThis
message Int32KV
{	
	
	
	int32 K = 1; 
	
	
	int32 V = 2; 

}

// Defined in table: DoNotUseThis
message DoNotUseThisDefine
{	
	
	
	int32 ConfID = 1; // 唯一ID

}

